--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Carlos Decloedt Jr
 description: KEEP CALM AND CODE ON
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/978252?s=400&u=8b61bda200426c4f9b8eeaa118cc63247b46cf94&v=4
+# avatar: https://avatars3.githubusercontent.com/u/978252?s=400&u=8b61bda200426c4f9b8eeaa118cc63247b46cf94&v=4
 
 #
 # Flags below are optional
